# binance-rs

./: Cargo.toml
benches/: websocket_benchmark.rs
examples/: binance_create_order_custom_params.rs  binance_endpoints.rs  binance_futures_endpoints.rs  binance_futures_userstream.rs  binance_futures_websockets.rs  binance_futures_websockets_modern.rs  binance_save_all_trades.rs  binance_websockets.rs  binance_websockets_modern.rs
src/: account.rs  api.rs  client.rs  config.rs  errors.rs  ffi.rs  general.rs  lib.rs  market.rs  model.rs  savings.rs  util.rs  websockets.rs  websockets_old.rs  ws_core.rs
src/futures/: account.rs  general.rs  market.rs  mod.rs  model.rs  websockets.rs  websockets_old.rs
tests/: account_tests.rs  futures_account_tests.rs  futures_general_tests.rs  futures_market_test.rs  general_tests.rs  market_tests.rs  unbounded_sender_test.rs
